--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -59,7 +59,7 @@
                 <div class="flex lg:flex-1">
                   <a href="https://democraciaenred.org" class="">
                     <span class="sr-only">Democracia en red</span>
-                    <img class="h-16 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
+                    <img class="h-12 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
                   </a>
                 </div>
                 <div class="flex lg:hidden">
@@ -70,16 +70,16 @@
                     </svg>
                   </button>
                 </div>
-                <div class="hidden py-2 pe-10 lg:flex lg:flex-1 lg:justify-end">
-                    <a href="https://democraciaenred.org/conocenos" class="hover:underline text-white py-2 text-xl mx-7">Conocenos</a>
-                    <a href="https://democraciaenred.org/recursos#resources" class="hover:underline text-white py-2 text-xl mx-7">Recursos</a>
-                    <a href="https://democraciaenred.org/transparencia" class="hover:underline text-white py-2 text-xl mx-7">Transparencia</a>
-                    <a href="https://democraciaenred.org/#ecosystem" class="hover:underline text-white py-2 text-xl mx-7">Ecosistema</a>
-                    <a href="https://democraciaenred.org/#press-slider" class="hover:underline text-white py-2 text-xl mx-7">Prensa</a>
-                    <a href="/" class="hover:underline text-white py-2 text-xl mx-7">Blog</a>
-                    <a href="#" class="hover:underline text-white text-xl border-2 rounded-full border-slate-300 py-2 px-6 mx-7">Contactanos</a>
-                    <a href="#" class="hover:underline text-white text-md mt-3 mx-5">ESP</a>
-                    <a href="#" class="hover:underline text-slate-500 text-md mt-3 mx-7">ENG</a>
+                <div class="hidden py-1 pe-10 lg:flex lg:flex-1 lg:justify-end">
+                    <a href="https://democraciaenred.org/conocenos" class="hover:underline text-white py-2  mx-7">Conocenos</a>
+                    <a href="https://democraciaenred.org/recursos#resources" class="hover:underline text-white py-2  mx-7">Recursos</a>
+                    <a href="https://democraciaenred.org/transparencia" class="hover:underline text-white py-2  mx-7">Transparencia</a>
+                    <a href="https://democraciaenred.org/#ecosystem" class="hover:underline text-white py-2  mx-7">Ecosistema</a>
+                    <a href="https://democraciaenred.org/#press-slider" class="hover:underline text-white py-2  mx-7">Prensa</a>
+                    <!-- <a href="/" class="hover:underline text-white py-2  mx-6">Blog</a> -->
+                    <a href="#" class="hover:bg-white hover:text-black text-white border rounded-full border-slate-300 py-1.5 px-5 ml-3 mr-4">Contactanos</a>
+                    <a href="#" class="hover:underline text-white text-sm mt-3 mx-4">ESP</a>
+                    <a href="#" class="hover:underline text-slate-500 text-sm mt-3 mx-4">ENG</a>
                 </div>
               </nav>
 
@@ -97,8 +97,7 @@
                 <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-gray-300 px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
                   <div class="flex items-center justify-between">
                     <a href="/" class="-m-1.5 p-1.5">
-                      <span class="sr-only">Your Company</span>
-                      <img class="h-8 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
+                      <img class="h-8" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
                     </a>
                     <button type="button" class="-m-2.5 rounded-md p-2.5 text-gray-700">
                       <span class="sr-only">Close menu</span>
@@ -149,13 +148,13 @@
                   <img class="h-20 my-5 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
                   <p class="mb-4 w-2/4">Democracia en Red es una ONG latinoamericana de Buenos Aires, Argentina, para el mundo.</p>
                   <hr class="border-gray-700 my-10">
-                  <p class="italic w-3/4">La tecnología avanza y cambia nuestras vidas. Es el momento del sistema político de abrirse al diálogo con la participación ciudadana.</p>
+                  <p class="italic w-3/4 text-sm">La tecnología avanza y cambia nuestras vidas. Es el momento del sistema político de abrirse al diálogo con la participación ciudadana.</p>
                 </div>
                 <!-- Sección central -->
-                <div class="text-2xl">
+                <div class="text-lg mt-5 px-10">
                   <h3 class="font-bold mb-4">Secciones</h3>
                   <ul>
-                    <li class="my-5"><a href="https://democraciaenred.org/conocenos" class="underline">Conocenos</a></li>
+                    <li class="mt-7 mb-5"><a href="https://democraciaenred.org/conocenos" class="underline">Conocenos</a></li>
                     <li class="my-5"><a href="https://democraciaenred.org/recursos#resources" class="underline">Recursos</a></li>
                     <li class="my-5"><a href="https://democraciaenred.org/transparencia" class="underline">Transparencia</a></li>
                     <li class="my-5"><a href="https://democraciaenred.org/#ecosystem" class="underline">Ecosistema</a></li>
@@ -164,10 +163,10 @@
                   </ul>
                 </div>
                 <!-- Sección derecha -->
-                <div class="text-2xl">
+                <div class="text-lg mt-5">
                   <h3 class="font-bold mb-4">Contacto</h3>
-                  <button class="text-white px-4 py-2 border-2 rounded-full border-slate-300 mb-4">Contactanos</button>
-                  <p class="text-slate-500">contacto@democraciaenred.org</p>
+                  <button class="text-white px-4 py-2 mt-2 border rounded-full border-slate-300 mb-4">Contactanos</button>
+                  <p class="text-gray-500">contacto@democraciaenred.org</p>
                   <h3 class="font-bold mt-10 mb-2">Redes</h3>
                 </div>
               </div>
