--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -56,13 +56,13 @@
         <div class="">
             <header class="bg-black inset-x-0 top-0 z-50">
               <nav class="flex items-center justify-between py-2 px-2" aria-label="Global">
-                <div class="flex lg:flex-1">
+                <div class="flex xl:flex-1">
                   <a href="https://democraciaenred.org" class="">
                     <span class="sr-only">Democracia en red</span>
-                    <img class="h-12 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
+                    <img class="h-12 min-w-44 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
                   </a>
                 </div>
-                <div class="flex lg:hidden">
+                <div class="flex xl:hidden">
                   <button type="button" class="-m-2.5 inline-flex items-center justify-center rounded-md p-2.5 text-gray-700">
                     <span class="sr-only">Open main menu</span>
                     <svg class="h-6 w-6" fill="none" viewBox="0 0 24 24" stroke-width="1.5" stroke="currentColor" aria-hidden="true">
@@ -70,16 +70,17 @@
                     </svg>
                   </button>
                 </div>
-                <div class="hidden py-1 pe-10 lg:flex lg:flex-1 lg:justify-end">
+                <div class="hidden py-1 pe-10 xl:flex xl:flex-1 xl:justify-end">
                     <a href="https://democraciaenred.org/conocenos" class="hover:underline text-white py-2  mx-7">Conocenos</a>
                     <a href="https://democraciaenred.org/recursos#resources" class="hover:underline text-white py-2  mx-7">Recursos</a>
                     <a href="https://democraciaenred.org/transparencia" class="hover:underline text-white py-2  mx-7">Transparencia</a>
                     <a href="https://democraciaenred.org/#ecosystem" class="hover:underline text-white py-2  mx-7">Ecosistema</a>
                     <a href="https://democraciaenred.org/#press-slider" class="hover:underline text-white py-2  mx-7">Prensa</a>
+                    <a href="/" class="hover:underline text-white py-2 mx-7">Blog</a>
                     <!-- <a href="/" class="hover:underline text-white py-2  mx-6">Blog</a> -->
                     <a href="#" class="hover:bg-white hover:text-black text-white border rounded-full border-slate-300 py-1.5 px-5 ml-3 mr-4">Contactanos</a>
-                    <a href="#" class="hover:underline text-white text-sm mt-3 mx-4">ESP</a>
-                    <a href="#" class="hover:underline text-slate-500 text-sm mt-3 mx-4">ENG</a>
+                    <a href="#" class="hover:underline text-slate-500 text-sm mt-3 mx-4">ESP</a>
+                    <a href="#" class="hover:underline text-white text-sm mt-3 mx-4">ENG</a>
                 </div>
               </nav>
 
@@ -91,7 +92,7 @@
 
 
               <!-- Mobile menu, show/hide based on menu open state. -->
-              <div class="lg:hidden" role="dialog" aria-modal="true">
+              <div class="xl:hidden" role="dialog" aria-modal="true">
                 <!-- Background backdrop, show/hide based on slide-over state. -->
                 <div class="fixed inset-0 z-50"></div>
                 <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-gray-300 px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
