--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -33,7 +33,9 @@
                     <p class="text-gray-500 text-sm">{{post.date}}</p>
                     <h2 class="text-gray-900 font-semibold text-xl mt-2">{{post.title}}</h2>
                     <p class="text-gray-600 text-sm mt-2">{{post.abstract}}</p>
-                    <button class="mt-4 py-2 px-4 bg-gray-300 text-gray-700 rounded-full text-sm">Metodología</button>
+                    {% for tag in post.tags.all %}
+                    <button class="mt-4 py-2 px-4 bg-gray-300 text-gray-700 rounded-full text-sm">{{tag}}</button>
+                    {% endfor %}
                 </div>
               </a>
               </div>
