--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -23,7 +23,7 @@
         <h1 class="text-5xl text-white mb-10 font-bold">{{ page.hero_cta }}</h1>
         <div class="flex flex-wrap justify-center">
           {% for post in posts %}
-          <div class="px-5 xl:w-1/3 md:w-1/2 sm:w-full">
+          <div class="px-5 xl:w-1/3 md:w-1/2 sm:w-full mb-5">
 
             <div class="bg-white rounded-lg shadow-md">
               <a href="{{post.get_url}}">
