Corrijo errores accesibilidad

--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -156,7 +156,7 @@
                 </div>
                 <!-- Sección central -->
                 <div class="sm:w-full lg:w-1/3 sm:px-10 text-md mt-5">
-                  <h3 class="font-bold mb-4">Secciones</h3>
+                  <p class="font-bold mb-4">Secciones</p>
                   <ul>
                     <li class="mt-7 mb-5"><a href="https://democraciaenred.org/conocenos" class="underline">Conocenos</a></li>
                     <li class="my-5"><a href="https://democraciaenred.org/recursos#resources" class="underline">Recursos</a></li>
@@ -168,10 +168,10 @@
                 </div>
                 <!-- Sección derecha -->
                 <div class="sm:w-full lg:w-1/3 sm:px-10 text-md mt-5">
-                  <h3 class="font-bold mb-4">Contacto</h3>
+                  <p class="font-bold mb-4">Contacto</p>
                   <button class="text-white px-4 py-2 mt-2 border rounded-full border-slate-300 mb-4">Contactanos</button>
                   <p class="text-gray-500">contacto@democraciaenred.org</p>
-                  <h3 class="font-bold mt-10 mb-2">Redes</h3>
+                  <p class="font-bold mt-10 mb-2">Redes</p>
                 </div>
               </div>
             </footer>   
