--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -163,18 +163,18 @@
         {# Override this in templates to add extra javascript #}
         {% endblock %}
             <!-- Footer -->
-            <footer class="bg-black text-white pt-10 pb-28">
+            <footer class="bg-black text-white pt-10 pb-28 px-2">
               <div class="container mx-auto flex flex-wrap mt-20">
 
                 <!-- Sección izquierda -->
-                <div class="sm:w-full lg:w-1/3 sm:px-10">
+                <div class="w-full lg:w-1/3 sm:px-10">
                   <img class="h-20 my-5 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
                   <p class="mb-4 w-2/4">Democracia en Red es una ONG latinoamericana de Buenos Aires, Argentina, para el mundo.</p>
                   <hr class="border-gray-700 my-10">
                   <p class="italic w-3/4 text-sm">La tecnología avanza y cambia nuestras vidas. Es el momento del sistema político de abrirse al diálogo con la participación ciudadana.</p>
                 </div>
                 <!-- Sección central -->
-                <div class="sm:w-full lg:w-1/3 sm:px-10 text-md mt-5">
+                <div class="w-full lg:w-1/3 sm:px-10 text-md mt-5">
                   <p class="font-bold mb-4">Secciones</p>
                   <ul>
                     <li class="mt-7 mb-5"><a href="https://democraciaenred.org/conocenos" class="underline">Conocenos</a></li>
@@ -186,7 +186,7 @@
                   </ul>
                 </div>
                 <!-- Sección derecha -->
-                <div class="sm:w-full lg:w-1/3 sm:px-10 text-md mt-5">
+                <div class="w-full lg:w-1/3 sm:px-10 text-md mt-5">
                   <p class="font-bold mb-4">Contacto</p>
                   <button class="text-white px-4 py-2 mt-2 border rounded-full border-slate-300 mb-4">Contactanos</button>
                   <p class="text-gray-500">contacto@democraciaenred.org</p>
