--- a/home/templates/home/home_page.html
+++ b/home/templates/home/home_page.html
@@ -5,8 +5,8 @@
     <div class="relative bg-pink px-6 lg:px-8 py-13 sm:py-48 lg:py-13 ">
         <div class="mx-auto max-w-3xl">
           <div class="text-center">
-            <h1 class="text-4xl text-white sm:text-4xl">Primera Asamblea Climática Argentina</h1>
-            <p class="text-xl mt-5 text-white tracking-tight">
+            <h1 class="text-4xl text-white pt-5">Primera Asamblea Climática Argentina</h1>
+            <p class="text-md mt-5 py-5 text-white tracking-tight">
               Desde la iniciativa internacional <b>Resurgentes</b> y <b>Democracia en Red</b>, con el apoyo de la Municipalidad de General Pueyrredon, estamos llevando adelante la primera Asamblea Climática Argentina en Mar del Plata: un espacio donde personas ciudadanas elegidas al azar podrán discutir y decidir sobre temas importantes para enfrentar la crisis climática en su ciudad. 
             </p>
           </div>
@@ -22,7 +22,7 @@
       </section>
     
     <div class="bg-black container mx-auto py-5">
-        <h1 class="text-5xl text-white mb-10 font-bold">{{ page.hero_cta }}</h1>
+        <h1 class="px-3 text-3xl text-white mb-10 font-bold">{{ page.hero_cta }}</h1>
         <div class="grid lg:grid-cols-3 gap-4 justify-center">
           {% for post in posts %}
           <div class="px-5 mb-5 h-full">
