--- a/post/templates/post/post_page.html
+++ b/post/templates/post/post_page.html
@@ -29,7 +29,7 @@
   {% srcset_image page.banner width-{400,800} class="w-full object-cover" style="height: 30vh!important" %}
 </div>
 
-<div class="container mx-auto flex flex-row flex-wrap lg:justify-center py-20">
+<div class="container px-3 mx-auto flex flex-row flex-wrap lg:justify-center py-20">
   <div class=" lg:w-8/12">
     <h1 class="text-3xl  font-bold">{{ page.title }}</h1>
     <p class="text-xl  my-4">Por {{ page.author }}</p>
@@ -37,39 +37,51 @@
       <p class="text-md text-center mt-4 mb-2">Compartí esta nota en:</p>
       <div class="flex justify-center">
         <a 
+          id="whatsapp-share" 
           class="m-1 p-3 border"
-          href="https://www.instagram.com/democraciaenred/"
+          href="#" 
           target="_blank"
           rel="noopener noreferrer"          
           > 
             <i class="bi-whatsapp"></i> Whatsapp
         </a>
         <a 
+          id="twitter-share" 
+          href="#"
           class="m-1 p-3 border"
-          href="https://x.com/"
           target="_blank"
           rel="noopener noreferrer"          
           > 
             <i class="bi-twitter"></i> Twitter
         </a>
         <a 
+          id="linkedin-share" 
+          href="#"        
           class="m-1 p-3 border"
-          href="https://www.linkedin.com/company/democracia-en-red/"
           target="_blank"
           rel="noopener noreferrer"          
           > 
             <i class="bi-linkedin"></i> Linkedin
         </a>
-        <!-- <a 
-          href="" 
-          class="m-1 p-3 border"
-          href="https://www.instagram.com/democraciaenred/"
-          target="_blank"
-          rel="noopener noreferrer"          
-          > 
-            <i class="bi-instagram"></i> Instagram
-        </a> -->
       </div>
+      <script>
+        // Obtener la URL actual
+        var currentUrl = window.location.href;
+      
+        // Construir el enlace de WhatsApp con la URL actual
+        var whatsappLink = "https://api.whatsapp.com/send?text=¡Hola! Te comparto esta nota súper interesante de Democracia en Red 👇%0A%0A" + encodeURIComponent(currentUrl);
+        // Asignar el enlace construido al atributo href del elemento a
+        document.getElementById("whatsapp-share").href = whatsappLink;
+        // Construir el enlace de twitter con la URL actual
+        var twitterLink = "https://x.com/intent/tweet?text=Comparto esta nota súper interesante de @fundacionDER 👇%0A%0A" + encodeURIComponent(currentUrl);
+        // Asignar el enlace construido al atributo href del elemento a
+        document.getElementById("twitter-share").href = twitterLink;
+        // Construir el enlace de linkedin con la URL actual
+        var linkedinLink = "https://www.linkedin.com/sharing/share-offsite/?url=" + encodeURIComponent(currentUrl);
+        // Asignar el enlace construido al atributo href del elemento a
+        document.getElementById("linkedin-share").href = linkedinLink;        
+      
+      </script>      
       <div class="flex justify-center">
         <a 
           class="mt-8 p-3 border"
@@ -80,7 +92,7 @@
       </div>      
     <!-- <p class="text-md  mt-5 mb-2">También te podría interesar</p> -->
   </div>
-  <div class=" lg:w-2/12 lg:text-right">
+  <div class="w-full text-center lg:w-2/12 lg:text-right">
     <p class="text-md  font-bold mt-8">Autor/a</p>
     <p class="text-sm  mt-1">{{ page.author }}</p>
     <p class="text-md  font-bold mt-8">Publicado</p>
