--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -5,7 +5,7 @@
     <head>
         <meta charset="utf-8" />
         <meta name="viewport" content="width=device-width, initial-scale=1" />        
-        <link rel="shortcut icon" href='https://democraciaenred.org/static/favicon-357977cd65b7e580e7608c32c305710f.png'>
+        <link rel="shortcut icon" href='{% static "img/favicon.png" %}'>
         <title>
             {% block title %}
             {% if page.seo_title %}{{ page.seo_title }}{% else %}{{ page.title }}{% endif %}
@@ -29,11 +29,11 @@
         <!-- Open Graph / Facebook -->
         <meta property="og:type" content="website" />
         <meta property="og:url" content="https://blog.democraciaenred.org" />
-        <meta property="og:image" content="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" />
+        <meta property="og:image" content='{% static "img/logo-der.png" %}' />
 
         <!-- Twitter -->
         <meta property="twitter:url" content="https://blog.democraciaenred.org" />
-        <meta property="twitter:image" content="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" />
+        <meta property="twitter:image" content='{% static "img/logo-der.png" %}' />
 
 
         {# Force all links in the live preview panel to be opened in a new tab #}
@@ -78,7 +78,7 @@
                 <div class="flex xl:flex-1">
                   <a href="https://democraciaenred.org" class="">
                     <span class="sr-only">Democracia en red</span>
-                    <img class="h-12 min-w-44 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
+                    <img class="h-12 min-w-44 w-auto" src='{% static "img/logo-der.png" %}' alt="Democracia en Red">
                   </a>
                 </div>
                 <div class="flex xl:hidden">
@@ -112,7 +112,7 @@
                 <div class="fixed inset-y-0 right-0 z-50 w-full overflow-y-auto bg-neutral-600 px-6 py-6 sm:max-w-sm sm:ring-1 sm:ring-gray-900/10">
                   <div class="flex items-center justify-between">
                     <a href="/" class="-m-1.5 p-1.5">
-                      <img class="h-12 min-w-44 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
+                      <img class="h-12 min-w-44 w-auto" src='{% static "img/logo-der.png" %}' alt="Democracia en Red">
                     </a>
                     <button onclick="toggleMobileMenu()" type="button" class="-m-2.5 rounded-md p-2.5 text-white">
                       <span class="sr-only">Close menu</span>
@@ -168,7 +168,7 @@
 
                 <!-- Sección izquierda -->
                 <div class="w-full lg:w-1/3 sm:px-10">
-                  <img class="h-20 my-5 w-auto" src="https://democraciaenred.org/static/logo-der-c4a077e18777182dff1075dd9adc1546.png" alt="Democracia en Red">
+                  <img class="h-20 my-5 w-auto" src='{% static "img/logo-der.png" %}' alt="Democracia en Red">
                   <p class="mb-4 w-2/4">Democracia en Red es una ONG latinoamericana de Buenos Aires, Argentina, para el mundo.</p>
                   <hr class="border-gray-700 my-10">
                   <p class="italic w-3/4 text-sm">La tecnología avanza y cambia nuestras vidas. Es el momento del sistema político de abrirse al diálogo con la participación ciudadana.</p>
