--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -35,6 +35,15 @@
         <meta property="twitter:url" content="https://blog.democraciaenred.org" />
         <meta property="twitter:image" content='{% static "img/logo-der.png" %}' />
 
+        <!-- Google tag (gtag.js) -->
+        <script async src="https://www.googletagmanager.com/gtag/js?id=G-EQPFTDL3FS"></script>
+        <script>
+          window.dataLayer = window.dataLayer || [];
+          function gtag(){dataLayer.push(arguments);}
+          gtag('js', new Date());
+          gtag('config', 'G-EQPFTDL3FS');
+        </script>
+
 
         {# Force all links in the live preview panel to be opened in a new tab #}
         {% if request.in_preview_panel %}
