agrego exepciones a .reset

--- a/post/templates/post/post_page.html
+++ b/post/templates/post/post_page.html
@@ -19,7 +19,7 @@
     text-decoration: underline;
     color: blue;
   }
-  .reset *:not(p) {
+  .reset *:not(p):not(img):not(a):not(iframe):not(.richtext-image) {
     all: revert!important;
   }  
 </style>
