--- a/blog/templates/base.html
+++ b/blog/templates/base.html
@@ -53,6 +53,7 @@
         {# Global stylesheets #}
         <link href="https://fonts.googleapis.com/css2?family=Lexend+Deca:wght@300;400;500;600;700&display=swap" rel="stylesheet">
         <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/bootstrap-icons/1.10.3/font/bootstrap-icons.min.css" />      
+        <script src="//embed.typeform.com/next/embed.js"></script>
         <script src="https://cdn.tailwindcss.com"></script>
         <script>
           tailwind.config = {
@@ -77,7 +78,7 @@
         {% block extra_css %}
         {# Override this in templates to add extra stylesheets #}
         {% endblock %}
-        
+      
     </head>
 
     <body class="{% block body_class %}bg-black{% endblock %}">
@@ -106,7 +107,7 @@
                     <a href="https://democraciaenred.org/#press-slider" class="hover:underline text-white py-2  mx-7">Prensa</a>
                     <a href="/" class="hover:underline text-white py-2 mx-7">Blog</a>
                     <!-- <a href="/" class="hover:underline text-white py-2  mx-6">Blog</a> -->
-                    <a href="#" class="hover:bg-white hover:text-black text-white border rounded-full border-slate-300 py-1.5 px-5 ml-3 mr-4">Contactanos</a>
+                    <button data-tf-popup="fSqwwL" class="hover:bg-white hover:text-black text-white border rounded-full border-slate-300 py-1.5 px-5 ml-3 mr-4">Contactanos</button>
                     <a href="#" class="hover:underline text-slate-500 text-sm mt-3 mx-4">ESP</a>
                     <a href="#" class="hover:underline text-white text-sm mt-3 mx-4">ENG</a>
                 </div>
@@ -197,7 +198,7 @@
                 <!-- Sección derecha -->
                 <div class="w-full lg:w-1/3 sm:px-10 text-md mt-5">
                   <p class="font-bold mb-4">Contacto</p>
-                  <button class="text-white px-4 py-2 mt-2 border rounded-full border-slate-300 mb-4">Contactanos</button>
+                  <button data-tf-popup="fSqwwL" class="text-white px-4 py-2 mt-2 border rounded-full border-slate-300 mb-4">Contactanos</button>
                   <p class="text-gray-500">contacto@democraciaenred.org</p>
                   <p class="font-bold mt-10 mb-2">Redes</p>
                   <div class="flex justify-between">
